--- a/home-samhaiden/html/development/home.css
+++ b/home-samhaiden/html/development/home.css
@@ -50,6 +50,11 @@ border-collapse: collapse;
 border-spacing: 0;
 }
     
+    html {
+        scroll-behavior: smooth;
+
+    }
+    
     body {
         font-family: Raleway;
         font-size: 22px;
@@ -63,35 +68,74 @@ border-spacing: 0;
     .menu-wrapper {
         top: 0;
         left: 0;
+        height: 70px;
         position: fixed;
         width: 100%;
-        background-color: black;
+        background-color: white;
+        box-shadow: 0px 0px 3px #000;
         
     }
     
+    .top-scroll {
+        font-size: 43px;
+        color: grey;
+        position: fixed;
+        bottom: 0;
+        left: 90%;
+        background-color: rgba(0,0,0,.0);
+        border: 3px solid grey;
+        border-bottom: none;
+        padding: 15;
+        padding-left: 17;
+        border-radius: 15%;
+        margin-bottom: -15;
+    }
+    
+    .top-scroll:hover {
+        background-color: aqua;
+        color: white; 
+        border: 3px solid aqua;
+    }
+    
     #hero {
-        background-image: url(https://mythsandmountains.com/wp-content/uploads/2018/10/myths-and-mountains-and-beyond.jpg);
-        grid-column: 1/-1;
-        grid-row: 1/1;
-        background-position: center;
+
+        height: 100vh;
+        width: 100vw;
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/6Ttow-g/timelapse-of-misty-fog-blowing-over-mountain-with-pine-tree-forest-with-rain-on_e2f0rtasx__F0000.png');
+        background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
-        height: 500px;
+        background-attachment: fixed;
+            
+    }
+    
+    .main-header {
+        color: white;
+        margin-top: 0;
+        margin-bottom: .5em;
+        font-size: 5em;
         
     }
-
-    #wrapper {
-        top: 0;
-        left: 0;
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(5, minmax(100px, auto));
-        grid-gap: 10px;
-        text-align: center;
-        margin: auto;
-        margin-top: 68px;
-        clear: both;
+    
+    li {
+        float: left;
+    }
+    
+    .menu-link {
+        text-decoration: none;
+        position: relative;
+        top: 22;
+        padding: 20px 20px 24px 20px;
+    }
+    
+    .menu-link:hover {
+        background-color: aqua;
+        color: white;
     }
     
     .hamburger, .cross {
@@ -101,36 +145,39 @@ border-spacing: 0;
     .menu {
         display: block !important;
         float: right;
-        margin: 25px;
-        font-size: 18px;
+        font-size: 22px;
         letter-spacing: 2px;
         list-style-type: none; 
         color: white;
-    }
-    .menu-link {
-        color: white;
+        padding-bottom: 2px;
     }
     
-    #projects-logo, header {
-        position: relative;
+    header {
         display: inline-block;
-        width: 250px;
-        margin: 10px 0px 0px 10px;
-        color: white;
+    }
+    
+    a.btn-learnmore {
+        display: block;
+        width: 200px;
+        padding: 1em;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 10px;
+        font-size: 18px;
+        background-color: rgba(0,0,0,.0);
+        border: 2px solid white;
+        color: white; 
+        text-align: center;
     }
     
     a {
         text-decoration: none;
-        margin: 0px 15px 0px 15px;
         color: black;
     }
     
-    a:hover {
+    a.btn-learnmore:hover {
         color: grey;
-    }
-    
-    a:active {
-        color: grey;
+        background-color: white;
     }
 
     .container {
@@ -138,7 +185,7 @@ border-spacing: 0;
     }
 
     .title {
-        line-height: 200px;
+        line-height: 100px;
         margin: auto;
         font-weight: 400;
         font-size: 22px;
@@ -147,11 +194,12 @@ border-spacing: 0;
     
     .row-one {
         grid-row: 2/3;
-        margin-top: 50px;
+        margin-top: 3em;
     }
     
     .row-two {
         grid-row: 3/4;
+        margin-top: 2em;
 
     }
     
@@ -162,6 +210,7 @@ border-spacing: 0;
     
     .col-one {
         grid-column: 2/3;
+        margin-right: 3em;
         
     }
 
@@ -171,19 +220,70 @@ border-spacing: 0;
 
     .col-three {
         grid-column: 4/5;
+        margin-left: 3em;
     }
-    
-    .all-columns {
-        grid-column: 2/5;
-        border: 1px solid black;
-        border-radius: 5px;
-        margin-top: 20px;
-    }
-
     
     .fa {
         font-size: 40px !important;
     }
+    
+    .about {
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(1, minmax(0px, auto)); 
+        border-top: 10px solid aqua;
+        border-bottom: 10px solid grey;
+    }
+    
+    .section-title {
+        font-size: 40px;
+        padding-bottom: 30px;
 
+    }
+    
+    .about-title {
+        grid-column: 1/6;
+        grid-row: 1/2;
+    }
+    
+    .anchor-offset {
+        top: -140px;
+        display: block;
+        position: relative;
+    }
+    
+    .about-text {
+        padding: 4em;
+        line-height: 1.45;
+        text-align: left;
+        grid-column: 1/4;
+        grid-row: 2/3;
+    }
+    
+    .about-image {
+        grid-column: 4/6;
+        grid-row: 2/3;
+        background-image: url(images/profile.jpg);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: fixed;
+        
+    }
+    
+    .projects{
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(3, minmax(0px, auto));
+        padding: 4em;
+        text-align: center;
+        border-bottom: 10px solid aqua;
+    }
+    
+    .projects-title {
+        grid-column: 1/6;
+        grid-row: 1/2;
+        text-align: left;
 
 }
