--- a/home-samhaiden/html/development/home.css
+++ b/home-samhaiden/html/development/home.css
@@ -77,6 +77,7 @@ border-spacing: 0;
     }
     
     .top-scroll {
+        display: none;
         font-size: 43px;
         color: grey;
         position: fixed;
@@ -92,9 +93,8 @@ border-spacing: 0;
     }
     
     .top-scroll:hover {
-        background-color: aqua;
+        background-color: grey;
         color: white; 
-        border: 3px solid aqua;
     }
     
     #hero {
