--- a/home-samhaiden/html/development/css/home-mobile.css
+++ b/home-samhaiden/html/development/css/home-mobile.css
@@ -1,151 +1,415 @@
 /* Mobile */
 
 @media screen and (max-width: 849px) {
+    /* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+margin: 0;
+padding: 0;
+border: 0;
+font-size: 100%;
+font: inherit;
+vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+display: block;
+}
+body {
+line-height: 1;
+}
+ol, ul {
+list-style: none;
+}
+blockquote, q {
+quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+content: '';
+content: none;
+}
+table {
+border-collapse: collapse;
+border-spacing: 0;
+}
     
-header {
+    html {
+        scroll-behavior: smooth;
+
+    }
+    
+    body {
+        font-family: Raleway;
+        font-size: 18px;
+        color: black;
+        font-weight: 400;
+        letter-spacing: 2px;
+        margin: 0px !important;
+
+    }
+    
+    .menu-wrapper {
+        top: 0;
+        left: 0;
+        height: 70px;
+        position: fixed;
+        width: 100%;
+        background-color: white;
+        box-shadow: 0px 0px 3px #000;
+        
+    }
+    
+    .top-scroll {
+        display: none;
+        font-size: 20px;
+        color: grey;
+        position: fixed;
+        bottom: 0;
+        left: 85%;
+        background-color: rgba(0,0,0,.0);
+        border: 2px solid grey;
+        border-bottom: none;
+        padding: 15;
+        padding-left: 17;
+        border-radius: 15%;
+        margin-bottom: -15;
+    }
+    
+    .top-scroll:hover {
+        background-color: grey;
+        color: white; 
+    }
+    
+    /*header {
 	width:100%; 
 	background:#ffffff; 
 	height:60px; 
 	line-height:60px;
     display:inline-block; 
-}
+    } */
     
-.hamburger {
-  background:none;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  line-height:45px;
-  padding:5px 15px 0px 15px;
-  color:#999;
-  border:0;
-  font-size:1.2em;
-  font-weight:bold;
-  cursor:pointer;
-  outline:none;
-  z-index:10000000000000;
-}
-        
-.cross{
-  background: none;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  padding: 7px 15px 0px 15px;
-  color:#999;
-  border:0;
-  font-size:2.5em;
-  line-height:65px;
-  font-weight:bold;
-  cursor:pointer;
-  outline:none;
-  z-index:10000000000000;
-    margin-top: 3px;
-}
-    
-.menu {
-    width:100%; 
-    background:#f1f1f1;  
-    position:absolute;
-    left: 0;
-    text-align:center; 
-    }
-    
-a {
-    display: block;   
-    padding: 20px 0 20px 0; 
-    border-bottom:#dddddd 1px solid;
-    text-decoration: none;
-    color: #000;
-    text-decoration:none;  
-    color:#000;
-    list-style-type: none; 
-    list-style-image: none;
-    font-family: Raleway;
-    font-size: 15px;
-    letter-spacing: 2px;
-    }
-    
-a:hover {
-    display: block;    
-    background:#ffffff; 
-    padding:20px 0 20px 0; 
-    border-bottom:#dddddd 1px solid;
-    text-decoration:none;
-    color: #999;
-    font-size: 15px;
-    letter-spacing: 2px;
+    .hamburger {
+      background:none;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      line-height:45px;
+      padding:5px 15px 0px 15px;
+      color:#999;
+      border:0;
+      font-size:1.2em;
+      font-weight:bold;
+      cursor:pointer;
+      outline:none;
+      z-index:10000000000000;
     }
 
-.glyphicon-home {
-  color:white; 
-  font-size:1.5em; 
-  margin-top:5px; 
-  margin:0 auto;
-}
-    
-span {
-    padding-left:20px;
+    .cross{
+      background: none;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      padding: 7px 15px 0px 15px;
+      color:#999;
+      border:0;
+      font-size:2.5em;
+      line-height:65px;
+      font-weight:bold;
+      cursor:pointer;
+      outline:none;
+      z-index:10000000000000;
+        margin-top: 3px;
     }
     
+    #hero {
+
+        height: 100vh;
+        width: 100vw;
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/6Ttow-g/timelapse-of-misty-fog-blowing-over-mountain-with-pine-tree-forest-with-rain-on_e2f0rtasx__F0000.png');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+            
+    }
     
-    #wrapper {
-        display: grid;
-        grid-template-rows: repeat(7, minmax(100px, auto));
-        grid-template-columns: 100%;
-        grid-gap: 30px;
-        text-align: center;
-        font-family: Raleway;
-        font-weight: 400;
+    .main-header {
+        color: white;
+        margin-top: 0;
+        margin-bottom: .5em;
+        font-size: 3em;
+        
+    }
+
+    .menu-link {
+        text-decoration: none;
+        position: relative;
+        top: 20;
+        padding: 20px 20px 24px 20px;
+        margin-top: 50px;
+    }
+
+    .main-menu li {
+        padding: 11px;
+        //border-bottom: 1px solid grey; 
+            
+    }
+    
+    .menu {
+        width:100%; 
+        background:#f1f1f1;  
+        position:absolute;
+        left: 0;
+        text-align:center;
+        height: 200px;
+    }
+    
+    header {
+        width:100%; 
+        background:#ffffff; 
+        height:60px; 
+        line-height:40px;
+        display:inline-block; 
+    }    
+    
+    a.btn-learnmore {
+        display: block;
+        width: 200px;
+        padding: .5em;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 10px;
         font-size: 18px;
-        letter-spacing: 2px;
-        padding: 10px;
-        margin-top: 35px;
+        background-color: rgba(0,0,0,.0);
+        border: 2px solid white;
+        color: white; 
+        text-align: center;
     }
     
-    #projects-logo {
-        position: absolute;
-        width: 150px;
-        margin: 10px 0px 0px 10px;
-        font-family: Raleway;
-        font-size: 20px;
+    a {
+        text-decoration: none;
+        color: black;
     }
     
+    a.btn-learnmore:hover {
+        color: grey;
+        background-color: white;
+    }
+
+    .container {
+        border: 1px solid black;
+    }
 
     .title {
+        line-height: 100px;
+        margin: auto;
+        font-weight: 400;
         font-size: 22px;
-        margin-top: 60px;
+        letter-spacing: 2px;
     }
     
-    .one, .two, .three, .four, .five, .six {
-         grid-column: 1;
+    #one {
+        grid-row: 2/3;
+        grid-column: 0/1;
+        margin-top: 1em;
     }
     
+    #two {
+        grid-row: 2/3;
+        grid-column: 1/2;
+        margin-top: 1em;
 
-    .one {
-        grid-row: 1;
     }
-
-    .two {
-        grid-row: 2;
+    
+    #three {
+        grid-row: 3/4;
+        grid-column: 0/1;
     }
-
-    .three {
-        grid-row: 3;
-    }
-
+    
     #four {
-        grid-row: 4;
+        grid-row: 3/4;
+        grid-column: 1/2;
+        
     }
-
+    
     #five {
-        grid-row: 5;
+        grid-row: 4/5;
+        grid-column: 0/1;
+    }
+    
+    #six {
+        grid-row: 4/5;
+        grid-column: 1/2;
     }
 
-   #six {
-        grid-row: 6;
-    }
     
     .fa {
         font-size: 40px !important;
     }
+    
+    .about {
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(2, minmax(300px, auto)); 
+        border-top: 10px solid aqua;
+        border-bottom: 10px solid aqua;
+    }
+    
+    .section-title {
+        font-size: 35px;
+        padding-bottom: 30px;
+
+    }
+    
+    .about-title {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    
+    .anchor-offset {
+        top: -140px;
+        display: block;
+        position: relative;
+    }
+    
+    .section-text {
+        padding: 2em;
+        line-height: 1.45;
+        text-align: left;
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    
+    .about-image {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        background-image: url(../images/profilev2.jpg);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: fixed;
+        
+    }
+    
+    .projects{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, minmax(0px, auto));
+        padding: 2em;
+        text-align: center;
+        background-color: #f6f6f6;
+    }
+    
+    .projects-title {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        text-align: left;
+    }
+    
+    .contact-form {
+        border-radius: 5px;
+        border: 1px solid grey;
+        margin: 5 0 30 0;
+    }
+    
+    .form-name, .form-email, .form-subject, .form-message {
+        height: 50px;
+        width: 80vw;
+        font-size: 22px;
+        font-family: raleway;
+        color: darkgrey;
+        padding-left: 10px;
+        background-color: white;
+    }
+    
+    .form-message {
+        height: 200px;
+        resize: none;
+    }
+    
+    .btn-submit {
+        width: 200px;
+        font-size: 18px;
+        height: 50px;
+        background-color: white;
+    }
+    
+    .btn-submit:hover {
+        background-color: aqua;
+        color: white;
+        border: none;
+        cursor: pointer;
+    }
+    
+    .success-message {
+        display: none;
+        background-color: lightgreen;
+        padding: 1em;
+        color: darkgreen;
+        border-radius: 5px;
+        margin-bottom: 20px;
+    }
+    
+    .failure-message {
+        display: none;
+        background-color: lightcoral;
+        padding: 1em;
+        color: black;
+        border-radius: 5px;
+        margin-bottom: 20px;   
+    }
+    
+    .closebtn {
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+        float: right;
+        font-size: 30px;
+        line-height: 1em;
+        cursor: pointer;
+        transition: 0.5s;
+    }
+
+    .closebtn:hover {
+        color: black;
+    }
+    
+    /*input[type="submit"] {
+        background-color: white;
+        width: 200px;
+        border-radius: 5px;
+        font-size: 18px;
+        height: 50px;
+    }
+    
+    input[type="submit"]:hover {
+        background-color: aqua;
+        color: white;
+        border: none;
+        cursor: pointer;
+    }*/
+    
+    
