--- a/home-samhaiden/development/css/home-mobile.css
+++ b/home-samhaiden/development/css/home-mobile.css
@@ -51,8 +51,6 @@ border-spacing: 0;
 }
     
     html {
-        scroll-behavior: smooth;
-
     }
     
     body {
@@ -173,8 +171,6 @@ border-spacing: 0;
 
     .main-menu li {
         padding: 11px;
-        //border-bottom: 1px solid grey; 
-            
     }
     
     .menu {
@@ -182,6 +178,7 @@ border-spacing: 0;
         background:#f1f1f1;  
         position:absolute;
         left: 0;
+        top: 70;
         text-align:center;
         height: 200px;
     }
@@ -290,7 +287,7 @@ border-spacing: 0;
     }
     
     .anchor-offset {
-        top: -140px;
+        top: -100px;
         display: block;
         position: relative;
     }
