--- a/home-samhaiden/development/css/home-mobile.css
+++ b/home-samhaiden/development/css/home-mobile.css
@@ -119,7 +119,7 @@ border-spacing: 0;
       z-index:10000000000000;
     }
 
-    .cross{
+    .cross {
       background: none;
       position: absolute;
       top: 10px;
@@ -137,20 +137,17 @@ border-spacing: 0;
     }
     
     #hero {
-
         height: 100vh;
         width: 100vw;
-        
         display: flex;
         align-items: center;
         justify-content: center;
-        
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/6Ttow-g/timelapse-of-misty-fog-blowing-over-mountain-with-pine-tree-forest-with-rain-on_e2f0rtasx__F0000.png');
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../images/hero-background-mobile-1.jpg');
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
-        background-attachment: fixed;
-            
+        background-position: relative;
+        
     }
     
     .main-header {
@@ -392,6 +389,30 @@ border-spacing: 0;
 
     .closebtn:hover {
         color: black;
+    }
+    
+    .footer {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(2, minmax(0px, auto));
+        background-color: #f6f6f6;
+        text-align: center;
+        font-size: 15px;
+        padding: 25 0 20 0;
+    }
+    
+    .footer-text {
+        grid-column: 1/2;
+        grid-row: 2/3;        
+    }
+    
+    .footer-icon {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    
+    .fa-bicycle {
+        font-size: 30px !important;
     }
     
     /*input[type="submit"] {
