--- a/home-samhaiden/development/css/home.css
+++ b/home-samhaiden/development/css/home.css
@@ -104,7 +104,7 @@ border-spacing: 0;
         align-items: center;
         justify-content: center;
         
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/6Ttow-g/timelapse-of-misty-fog-blowing-over-mountain-with-pine-tree-forest-with-rain-on_e2f0rtasx__F0000.png');
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../images/hero-background.png');
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -351,6 +351,30 @@ border-spacing: 0;
 
     .closebtn:hover {
         color: black;
+    }
+    
+    .footer {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(2, minmax(0px, auto));
+        background-color: #f6f6f6;
+        text-align: center;
+        font-size: 15px;
+        padding: 25px;
+    }
+    
+    .footer-text {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    
+    .footer-icon {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    
+    .fa-bicycle {
+        font-size: 35px !important;
     }
     
     /*input[type="submit"] {
