added button background color

--- a/home-samhaiden/development/css/home.css
+++ b/home-samhaiden/development/css/home.css
@@ -310,7 +310,7 @@ border-spacing: 0;
         width: 200px;
         font-size: 18px;
         height: 50px;
-        
+        background-color: white;
     }
     
     .btn-submit:hover {
