--- a/home-samhaiden/development/css/home.css
+++ b/home-samhaiden/development/css/home.css
@@ -71,6 +71,7 @@ border-spacing: 0;
         width: 100%;
         background-color: white;
         box-shadow: 0px 0px 3px #000;
+        z-index: 1;
         
     }
     
@@ -401,7 +402,7 @@ border-spacing: 0;
         background-repeat: no-repeat;
         background-position: center center;
         position: relative;
-        z-index: -2;
+        //z-index: -1;
     }
     
     .landscape {
