--- a/home-samhaiden/development/css/main.css
+++ b/home-samhaiden/development/css/main.css
@@ -53,7 +53,7 @@ border-spacing: 0;
     }
 
     .title {
-        line-height: 100px;
+        line-height: 75px;
         margin: auto;
         font-weight: 400;
         font-size: 22px;
@@ -496,21 +496,48 @@ border-spacing: 0;
 
 /* Project section general styling */
 
-.one:hover, .two:hover, .three:hover, .four:hover, .five:hover, .six:hover {
-    color: aqua;
+#one:hover, #two:hover, #three:hover, #four:hover, #five:hover, #six:hover {
+    background-color: aqua;
+    color: white;
+}
+
+.projects {
+    background-color: #f6f6f6 !important;
 }
 
 /* Project section desktop */
 
-@media screen and (min-width: 850px) {
+@media screen and (min-width: 1100px) {
     
-    .projects{
+    .projects {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(3, minmax(0px, auto));
+        grid-gap: 50px;
         padding: 4em;
+    }
+    
+    #one, #two, #three, #four, #five, #six {
+        border: 1px solid black;
+        height: 250px;
+        width: 250px;
+        flex-wrap: wrap;
         text-align: center;
-        background-color: #f6f6f6;
+        border-radius: 10px;
+    }
+    
+    a.one, a.two, a.three, a.four, a.five, a.six {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        height: 250px;
+        width: 250px;
+        flex-direction: column;
+    }
+    
+    .title {
+        margin: 0;
     }
     
     .projects-title {
@@ -521,12 +548,10 @@ border-spacing: 0;
     
     .row-one {
         grid-row: 2/3;
-        margin-top: 3em;
     }
     
     .row-two {
         grid-row: 3/4;
-        margin-top: 2em;
     }
     
     .row-three {
@@ -535,7 +560,6 @@ border-spacing: 0;
     
     .col-one {
         grid-column: 2/3;
-        margin-right: 3em; 
     }
 
     .col-two {
@@ -544,22 +568,45 @@ border-spacing: 0;
 
     .col-three {
         grid-column: 4/5;
-        margin-left: 3em;
     }
     
 }
 
 /* Project section mobile */
 
-@media screen and (max-width: 849px) {
+@media screen and (max-width: 1099px) {
     
     .projects{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, minmax(0px, auto));
+        grid-template-rows: repeat(5, minmax(0px, auto));
         padding: 2em;
         text-align: center;
-        background-color: #f6f6f6;
+        grid-gap: 10px;
+    }
+    
+    #one, #two, #three, #four, #five, #six {
+        
+        border: 1px solid black;
+        height: 125px;
+        flex-wrap: wrap;
+        text-align: center;
+        border-radius: 10px;
+    }
+    
+    a.one, a.two, a.three, a.four, a.five, a.six {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        height: 125px;
+        flex-direction: column;
+    }
+    
+    .title, .fas {
+        font-size: 15px;
+        margin: 0;
+        line-height: 35px;
     }
     
     .projects-title {
@@ -570,34 +617,32 @@ border-spacing: 0;
     
     #one {
         grid-row: 2/3;
-        grid-column: 0/1;
-        margin-top: 1em;
+        grid-column: 2;
     }
     
     #two {
         grid-row: 2/3;
-        grid-column: 1/2;
-        margin-top: 1em;
+        grid-column: 1;
     }
     
     #three {
         grid-row: 3/4;
-        grid-column: 0/1;
+        grid-column: 1;
     }
     
     #four {
         grid-row: 3/4;
-        grid-column: 1/2;   
+        grid-column: 2;   
     }
     
     #five {
         grid-row: 4/5;
-        grid-column: 0/1;
+        grid-column: 1;
     }
     
     #six {
         grid-row: 4/5;
-        grid-column: 1/2;
+        grid-column: 2;
     }  
     
 }
@@ -1171,113 +1216,5 @@ border-spacing: 0;
         margin-bottom: 20px;
         
     }
-    
-}
-
-/* Project section general styling */
-
-.one:hover, .two:hover, .three:hover, .four:hover, .five:hover, .six:hover {
-    color: aqua;
-}
-
-/* Project section desktop */
-
-@media screen and (min-width: 850px) {
-    
-    .projects{
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(3, minmax(0px, auto));
-        padding: 4em;
-        text-align: center;
-        background-color: #fff;
-    }
-    
-    .projects-title {
-        grid-column: 1/6;
-        grid-row: 1/2;
-        text-align: left;
-    }
-    
-    .row-one {
-        grid-row: 2/3;
-        margin-top: 3em;
-    }
-    
-    .row-two {
-        grid-row: 3/4;
-        margin-top: 2em;
-    }
-    
-    .row-three {
-        grid-row: 4/5;
-    }
-    
-    .col-one {
-        grid-column: 2/3;
-        margin-right: 3em; 
-    }
-
-    .col-two {
-        grid-column: 3/4;
-    }
-
-    .col-three {
-        grid-column: 4/5;
-        margin-left: 3em;
-    }
-    
-}
-
-/* Project section mobile */
-
-@media screen and (max-width: 849px) {
-    
-    .projects{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, minmax(0px, auto));
-        padding: 2em;
-        text-align: center;
-        background-color: #fff;
-    }
-    
-    .projects-title {
-        grid-column: 1/2;
-        grid-row: 1/2;
-        text-align: left;
-    }
-    
-    #one {
-        grid-row: 2/3;
-        grid-column: 0/1;
-        margin-top: 1em;
-    }
-    
-    #two {
-        grid-row: 2/3;
-        grid-column: 1/2;
-        margin-top: 1em;
-    }
-    
-    #three {
-        grid-row: 3/4;
-        grid-column: 0/1;
-    }
-    
-    #four {
-        grid-row: 3/4;
-        grid-column: 1/2;   
-    }
-    
-    #five {
-        grid-row: 4/5;
-        grid-column: 0/1;
-    }
-    
-    #six {
-        grid-row: 4/5;
-        grid-column: 1/2;
-    }  
     
 }
