--- a/home-samhaiden/development/css/main.css
+++ b/home-samhaiden/development/css/main.css
@@ -46,19 +46,6 @@ border-collapse: collapse;
 border-spacing: 0;
 }
 
-/* Body general styling */
-
-    .container {
-        border: 1px solid black;
-    }
-
-    .title {
-        line-height: 75px;
-        margin: auto;
-        font-weight: 400;
-        font-size: 22px;
-        letter-spacing: 2px;
-    }
 
 /* Body desktop */ 
 
@@ -88,7 +75,7 @@ border-spacing: 0;
         letter-spacing: 2px;
         margin: 0px !important;
     }
-    
+       
 }
 
 /* Top-scroll general styling */
@@ -112,12 +99,14 @@ border-spacing: 0;
         border-radius: 15%;
         margin-bottom: -15;
         z-index: 1;
+        text-decoration: none;
     }
     
     .top-scroll:hover {
         background-color: dodgerblue;
         border: 3px solid dodgerblue;
         color: white; 
+        text-decoration: none;
     }
 
 }
@@ -141,12 +130,14 @@ border-spacing: 0;
         border-radius: 15%;
         margin-bottom: -15;
         z-index: 1;
+        text-decoration: none;
     }
     
     .top-scroll:hover {
         background-color: dodgerblue;
         border: 2px solid dodgerblue;
         color: white; 
+        text-decoration: none;
     }
     
 }
@@ -298,7 +289,6 @@ border-spacing: 0;
     }
     
     #hero {
-
         height: 100vh;
         width: 100vw;
         display: flex;
@@ -311,7 +301,7 @@ border-spacing: 0;
         background-attachment: fixed;    
     }
     
-        a.btn-learnmore {
+    a.btn-learnmore {
         display: block;
         width: 200px;
         padding: 1em;
@@ -323,6 +313,7 @@ border-spacing: 0;
         border: 2px solid white;
         color: white; 
         text-align: center;
+        text-decoration: none;
     }
     
     a {
@@ -347,7 +338,6 @@ border-spacing: 0;
         margin-top: 0;
         margin-bottom: .5em;
         font-size: 3em;
-        
     }
     
  #hero {
@@ -375,6 +365,7 @@ border-spacing: 0;
         border: 2px solid white;
         color: white; 
         text-align: center;
+        text-decoration: none;
     }
     
     a {
@@ -509,7 +500,6 @@ border-spacing: 0;
 
 a.one:hover, a.two:hover, a.three:hover, a.four:hover, a.five:hover, a.six:hover {
     color: white;
-    
 }
 
 .projects {
@@ -545,6 +535,7 @@ a.one:hover, a.two:hover, a.three:hover, a.four:hover, a.five:hover, a.six:hover
         height: 250px;
         width: 250px;
         flex-direction: column;
+        text-decoration: none;
     }
     
     .fas, .far, .fab {
@@ -553,6 +544,7 @@ a.one:hover, a.two:hover, a.three:hover, a.four:hover, a.five:hover, a.six:hover
     
     .title {
         margin: 0;
+        padding-top: 10px;
     }
     
     .projects-title {
@@ -622,6 +614,7 @@ a.one:hover, a.two:hover, a.three:hover, a.four:hover, a.five:hover, a.six:hover
         font-size: 20px !important;
         margin: 0;
         line-height: 35px;
+        padding-top: 10px;
     }
     
     .projects-title {
@@ -1239,27 +1232,28 @@ a.one:hover, a.two:hover, a.three:hover, a.four:hover, a.five:hover, a.six:hover
 @media screen and (min-width: 850px) {
     
 #login-page {
-background-image: url("../images/login-background.jpg");
-background-repeat: no-repeat;
-background-position: center center;
-background-size: cover;
-height: 100vh;
-width: 100vw;
-display: flex;
-justify-content: center;
-align-items: center; 
-text-align: center;
+    background-image: url("../images/login-background.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    text-align: center;
+    margin-top: 70px;
 }
 
 body {
-margin: 0px;
-padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 #homeh1 {
-font-size: 2em;
-color: white;
-margin-bottom: 30px;
+    font-size: 2em;
+    color: white;
+    margin-bottom: 30px;
 }
 
 #errorMessage {
