removed menu-icon-link text decoration

--- a/home-samhaiden/development/css/main.css
+++ b/home-samhaiden/development/css/main.css
@@ -164,14 +164,14 @@ border-spacing: 0;
         float: left;
     }
     
-    .menu-link, menu-link-icon {
+    .menu-link, .menu-link-icon {
         text-decoration: none;
         position: relative;
         top: 22;
         padding: 20px 20px 24px 20px;
     }
     
-    .menu-link:hover {
+    .menu-link:hover, .menu-link-icon {
         background-color: dodgerblue;
         color: white;
     }
@@ -217,7 +217,6 @@ border-spacing: 0;
       right: 20px;
       line-height: 45px;
       padding:5px 15px 0px 15px;
-<<<<<<< HEAD
       color: #999;
       border: 0;
       font-size: 1.2em;
@@ -225,15 +224,6 @@ border-spacing: 0;
       cursor: pointer;
       outline: none;
       z-index: 10000000000000;
-=======
-      color:#999;
-      border:0;
-      font-size:1.2em;
-      font-weight:bold;
-      cursor:pointer;
-      outline:none;
-      z-index:100;
->>>>>>> c26e90ad4128ed070a97ca2f997da1a9ee3d0051
     }
 
     .cross {
@@ -242,7 +232,6 @@ border-spacing: 0;
       top: 10px;
       right: 20px;
       padding: 7px 15px 0px 15px;
-<<<<<<< HEAD
       color: #999;
       border: 0;
       font-size: 2.5em;
@@ -263,48 +252,10 @@ border-spacing: 0;
     .menu-link-icon {
         top: 20;
         margin-top: 50px;
-=======
-      color:#999;
-      border:0;
-      font-size:2.5em;
-      line-height:65px;
-      font-weight:bold;
-      cursor:pointer;
-      outline:none;
-      z-index:10000000000000;
-      margin-top: 3px;
-    }
-
-    .menu-logo {
-        position: relative;
-        top: 20;
-        padding: 30px 20px 20px 20px;
->>>>>>> c26e90ad4128ed070a97ca2f997da1a9ee3d0051
     }
 
     .main-menu li {
-        padding: 15px;
-    }
-    
-    .main-menu li:hover {
-        padding: 15px;
-        background-color: dodgerblue;
-    }
-    
-    .menu-logo:hover {
-        background-color: dodgerblue;
-        color: white;
-        padding: 30px 20px 20px 20px;
-        
-    }
-    
-    .menu-link {
-        padding: 10px 100px;
-    }
-    
-    .menu-link:hover {
-        color: white;
-        
+        padding: 11px;
     }
     
     .main-menu li:hover {
@@ -319,13 +270,8 @@ border-spacing: 0;
         position: absolute;
         left: 0;
         top: 70;
-<<<<<<< HEAD
         text-align: center;
         height: 200px;
-=======
-        text-align:center;
-        height: 240px;
->>>>>>> c26e90ad4128ed070a97ca2f997da1a9ee3d0051
     }
     
     header {
@@ -335,11 +281,6 @@ border-spacing: 0;
         line-height: 40px;
         display: inline-block; 
     }  
-    
-    li {
-        
-        
-    }
     
 }
 
